2010-09-13 14:42  Rocky Bernstein

	* ChangeLog, Rakefile: ChangeLog now gets info from branch

2010-09-13 14:21  Rocky Bernstein

	* NEWS: One more update

2010-09-13 14:19  Rocky Bernstein

	* ChangeLog, NEWS, README, Rakefile: Get ready for release tf-0.43

2010-04-25 13:08  Rocky Bernstein

	* Rakefile: User needs to use "sudo rake install" when needed.

2010-04-21 22:02  Rocky Bernstein

	* test/test-lnum.rb, test/test-tracelines.rb: Remove array
	  require_relative

2010-04-21 22:01  Rocky Bernstein

	* ChangeLog: Administrivia

2010-03-23 16:30  Rocky Bernstein

	* ChangeLog, Rakefile: Add install targets.

2009-12-06 14:16  Rocky Bernstein

	* ChangeLog, test/data/def1.rb: Dec 4 change by nobu to parse.y
	  adjusts the methdo definition to the "def" line:
	  Ruby Redmine Bug #2427.

2009-10-22 13:05  Rocky Bernstein

	* lib/linecache.rb: "unmap" -> "map". Again, I think I got this
	  backwards. Also, we need
	  to run map_file even if lines in that haven't been remapped.

2009-10-22 11:47  Rocky Bernstein

	* lib/linecache.rb: I think I got arguments in the wrong order in
	  remap_file.

2009-10-18 23:47  Rocky Bernstein

	* lib/tracelines.rb, test/data/block2.rb, test/data/case1.rb,
	  test/data/case2.rb, test/data/case5.rb, test/data/class1.rb,
	  test/data/def1.rb, test/data/for1.rb, test/data/if4.rb,
	  test/data/if5.rb, test/data/if7.rb, test/data/match3.rb,
	  test/data/match3a.rb, test/rcov-bug.rb, test/test-linecache.rb,
	  test/test-tracelines.rb: Itereate over all (child) instruction
	  sequence now, using support from a patch to Ruby 1.9.

2009-09-26 14:56  Rocky Bernstein

	* ChangeLog, lib/tracelines.rb: offset2lines -> offsetlines name
	  change in rb-threadframe.

2009-09-25 13:53  Rocky Bernstein

	* Rakefile, lib/linecache.rb, test/test-lnum.rb: linecache.rb: need
	  to add to cache if file not loaded
	  Rakefile: add dependency on rb-threadframe
	  remove stray debug print.

2009-09-25 08:51  Rocky Bernstein
