@@ -1,0 +1,10 @@
+# Whatever it is you want to do, it should be forwarded to the 
+# to top-level irectories
+PHONY=check test all
+
+test: check
+all: check
+	true
+
+%: 
+	rake $@
