@@ -1,7 +1,5 @@
 #!/usr/bin/env ruby
-# $Id$
-# 
-#   Copyright (C) 2007, 2008, 2009 Rocky Bernstein <rockyb@rubyforge.net>
+#   Copyright (C) 2007, 2008, 2009, 2010 Rocky Bernstein <rockyb@rubyforge.net>
 #
 #    This program is free software; you can redistribute it and/or modify
 #    it under the terms of the GNU General Public License as published by
@@ -23,8 +21,6 @@
 #
 # = linecache
 # A module to read and cache lines of a Ruby program. 
-# == Version
-# :include:VERSION
 
 # == SYNOPSIS
 #
