@@ -1,0 +1,3 @@
+module LineCache
+  VERSION = 0.45
+end
