@@ -1,3 +1,8 @@
+2010-09-13 14:49  Rocky Bernstein
+
+	* ChangeLog, NEWS, Rakefile, VERSION: Update description for
+	  gemcutter
+
 2010-09-13 14:42  Rocky Bernstein
 
 	* ChangeLog, Rakefile: ChangeLog now gets info from branch
